--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-bootstrap-modal": "^4.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.5.0",
     "styled-components": "^5.3.6"
